[tool.poetry]
name = "sars-fastapi"
version = "0.1.0"
description = ""
authors = ["qiyaqing <qiyaqing@yogorobot.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
